kubernetes/apps/spa-demo/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spa-demo
  namespace: spa-demo
spec:
  selector:
    app.kubernetes.io/name: spa-demo
  ports:
    - name: http
      port: 80
      targetPort: http
